--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
   <package id="NUnit" version="3.13.3" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.2.1" targetFramework="net472" />
   <package id="Selenium.Support" version="4.1.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.1.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="100.0.4896.6000" targetFramework="net472" />
