Start of login function and file reading

--- a/NUnitLessonsSharonSefi.csproj
+++ b/NUnitLessonsSharonSefi.csproj
@@ -61,7 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Sharon\LoginFxn.cs" />
     <Compile Include="Objects.cs" />
+    <Compile Include="Sharon\SharonTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
